<!--
  ~ Copyright (c) 2015. This was programmed by IC-Tea (@sirNoolas - David Vonk): Do not copy!
  -->

<resources>
    <string name="app_name">CoPo</string>
    <string name="action_settings">Instellingen</string>
    <string name="what_happened">Wat is er gebeurt</string>
    <string name="learnedLesson">Wat heb ik hiervan geleerd?</string>
    <string name="title">Titel</string>

    <!-- utilities -->
    <string name="save">Opslaan</string>
    <string name="cancel">Annuleren</string>
    <string name="delete">Verwijderen</string>
    <string name="edit">Aanpassen</string>
    <string name="share">Delen</string>
    <string name="group">Groep:</string>
    <string name="confirm_save_toast">Het verslag is opgeslagen</string>

    <string name="instruction_message">Instructies:\n\n Nieuw verslag aanmaken:\nDruk op de ronde plus knop (Rechtsonder)\n\n Verslag aanpassen of bekijken:\nKlik kort op de bijbehorende regel\n\n Verslag(en) delen  of verwijderen:\n 1) Selecteer ongeveer 2 seconden 1 van de regels die je wilt delen of verwijderen\n 2) Selecteer daarna door kort te klikken de andere regels\n 3) Kies bovenin voor delen (de rest wijst zich dan vanzelf) of verwijderen\n</string>
    <string name="select_competence_mesage">Selecteer een competentie om de bijbehorende portfolio-verslagen weer te geven</string>
    <string name="share_all">Alles delen</string>
    <string name="no_sharable_entries_message">Er zijn geen deelbare verslagen gevonden</string>

    <string name="all">Alles</string>
    <string name="perseverance">Doorzetten</string>
    <string name="working_alone">Individueel werken</string>
    <string name="process_orientation">Procesgerichtheid</string>
    <string name="knowledge_orientation">Kennisgerichtheid</string>
    <string name="collaboration">Samenwerken</string>
    <string name="product_orientation">Productgerichtheid</string>
    <string name="inventivity">Inventiviteit</string>
    <string name="planning_and_organisation">Plannen en Organiseren</string>
    <string name="add_project">Nieuw project</string>
    <string name="title_activity_projects">ProjectsActivity</string>
    <string name="title_activity_display_entries">DisplayEntries</string>
    <string name="projects">Projecten</string>
    <string name="log">Logboek</string>
    <string name="portfolio">Portfolio</string>
    <string name="date">Datum:</string>
    <string name="project">Project:</string>
    <string name="competence">Vaardigheid:</string>
    <string name="achievement">Wat heb ik bereikt?</string>
    <string name="next_time">Wat doe ik de volgende keer anders?</string>
    <string name="description">Omschrijving:</string>
    <string name="logs">Logboek</string>
    <string name="goals">Doelen</string>
    <string name="edit_project">Project aanpassen</string>
    <string name="title_activity_display_projects">Projecten</string>

    <!-- sharing -->
    <string name="message_divider">\n\n==================================================\n\n</string>
    <string name="message_start_1">Dit is een automatisch gegenereerd bericht door de \'</string>
    <string name="message_start_2">\' Competentie en Portfolio app.</string>
    <string name="message_end">Wanneer u vragen en/of opmerkingen heeft over dit bericht kunt u mailen naar: noolasproductions@gmail.com. \n</string>
    <string name="share_projects">Project(en) delen</string>
    <string name="spent_hours">Bestede uren:</string>
    <string name="selected_shareselect">geselecteerd</string>

</resources>
