<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015. This was programmed by IC-Tea (@sirNoolas - David Vonk): Do not copy!
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:background="@drawable/klimmuurmal">
    <Button
        android:id="@+id/am_projects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projects"
        android:textSize="18sp"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:onClick="startCategory"/>

    <Button
        android:id="@+id/am_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_projects"
        android:text="@string/log"
        android:textSize="18sp"
        android:onClick="startCategory"/>

    <Button
        android:id="@+id/am_portfolio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_logs"
        android:text="@string/portfolio"
        android:textSize="18sp"
        android:onClick="startCategory"/>

    <!-- ADD: A button that leads to the competences and the accompanying explanation-->

    <TextView
        android:id="@+id/am_points_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="100sp"
        android:textColor="@color/colorPrimary"
        android:hint="XX" />
</RelativeLayout>